write some thing

--- a/KDE scores and KMean.ipynb
+++ b/KDE scores and KMean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -23,17 +23,17 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "with open('./tmp/typeid.json') as f:\n",
+    "with open('./data/typeid.json') as f:\n",
     "    typeid = json.load(f)\n",
     "with open('./tmp/bw_result.json') as f:\n",
     "    typebw = json.load(f)\n",
-    "rentdf = pd.read_csv('./tmp/170911_rentclear.csv')\n",
-    "envdf = pd.read_csv('./tmp/env_clear.csv')"
+    "rentdf = pd.read_csv('./data/clear_rent_items.csv')\n",
+    "envdf = pd.read_csv('./data/clear_env_items.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
