--- a/step2_KDE_bandwidth_estimated.ipynb
+++ b/step2_KDE_bandwidth_estimated.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import json\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns; sns.set(color_codes=True)\n",
     "\n",
@@ -16,61 +15,19 @@
     "import pandas as pd\n",
     "from sklearn.neighbors import KernelDensity\n",
     "\n",
+    "#將經緯度轉為TWD97座標(單位:公尺)\n",
+    "from LatLonToTWD97 import LatLonToTWD97\n",
+    "c = LatLonToTWD97()\n",
     "\n",
-    "rentdf= pd.read_csv('./170911_rentclear.csv')\n",
-    "envdf= pd.read_csv('./env_clear.csv')"
+    "rentdf= pd.read_csv('./data/clear_rent_items.csv')\n",
+    "envdf= pd.read_csv('./data/clear_env_items.csv')\n",
+    "with open('./data/typeid.json') as f:\n",
+    "    typeid = dict(json.load(f))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pymysql\n",
-    "import redis\n",
-    "\n",
-    "#redis connection\n",
-    "#r = redis.StrictRedis(host='172.17.0.2', port=6379, db=0)\n",
-    "\n",
-    "#connect maria rdb\n",
-    "db = pymysql.connect(\n",
-    "        host='172.17.0.4',\n",
-    "        user='root',\n",
-    "        passwd='1234',\n",
-    "        db='rental',\n",
-    "        charset='utf8mb4'\n",
-    "    )\n",
-    "#設置cursor\n",
-    "cursor = db.cursor()\n",
-    "cursor.execute('SELECT * FROM typeID;')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "typeid = dict(cursor.fetchall())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +38,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>ID</th>\n",
        "      <th>cityID</th>\n",
        "      <th>pet</th>\n",
@@ -97,7 +53,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>251</td>\n",
        "      <td>N</td>\n",
@@ -111,7 +66,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>251</td>\n",
        "      <td>N</td>\n",
@@ -125,7 +79,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>251</td>\n",
        "      <td>N</td>\n",
@@ -139,7 +92,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>251</td>\n",
        "      <td>N</td>\n",
@@ -153,7 +105,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>239</td>\n",
        "      <td>N</td>\n",
@@ -170,22 +121,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  ID  cityID pet   rent  space        lat         lng label  \\\n",
-       "0           0   1     251   N  25000  62.34  25.181837  121.440487     住   \n",
-       "1           1   2     251   N  32000  50.70  25.197719  121.421685     住   \n",
-       "2           2   3     251   N  25000  44.97  25.178503  121.454991     住   \n",
-       "3           3   4     251   N   5000   7.00  25.170918  121.441836     套   \n",
-       "4           4   5     239   N   6000   7.99  24.974047  121.327134     套   \n",
+       "   ID  cityID pet   rent  space        lat         lng label  floor  \\\n",
+       "0   1     251   N  25000  62.34  25.181837  121.440487     住      5   \n",
+       "1   2     251   N  32000  50.70  25.197719  121.421685     住      2   \n",
+       "2   3     251   N  25000  44.97  25.178503  121.454991     住      9   \n",
+       "3   4     251   N   5000   7.00  25.170918  121.441836     套      4   \n",
+       "4   5     239   N   6000   7.99  24.974047  121.327134     套      3   \n",
        "\n",
-       "   floor        unit  \n",
-       "0      5  401.026628  \n",
-       "1      2  631.163708  \n",
-       "2      9  555.926173  \n",
-       "3      4  714.285714  \n",
-       "4      3  750.938673  "
+       "         unit  \n",
+       "0  401.026628  \n",
+       "1  631.163708  \n",
+       "2  555.926173  \n",
+       "3  714.285714  \n",
+       "4  750.938673  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -209,7 +160,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>ID</th>\n",
        "      <th>cityID</th>\n",
        "      <th>typeID</th>\n",
@@ -221,7 +171,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>104</td>\n",
        "      <td>101</td>\n",
@@ -231,7 +180,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>235</td>\n",
        "      <td>101</td>\n",
@@ -241,7 +189,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>241</td>\n",
        "      <td>101</td>\n",
@@ -251,7 +198,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>106</td>\n",
        "      <td>101</td>\n",
@@ -261,7 +207,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>110</td>\n",
        "      <td>101</td>\n",
@@ -274,15 +219,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  ID  cityID  typeID  cost        lat         lng\n",
-       "0           0   1     104     101   300  25.056030  121.544220\n",
-       "1           1   2     235     101   150  25.002616  121.472260\n",
-       "2           2   3     241     101   145  25.066205  121.498771\n",
-       "3           3   4     106     101   745  25.026635  121.551803\n",
-       "4           4   5     110     101    64  25.039510  121.576738"
+       "   ID  cityID  typeID  cost        lat         lng\n",
+       "0   1     104     101   300  25.056030  121.544220\n",
+       "1   2     235     101   150  25.002616  121.472260\n",
+       "2   3     241     101   145  25.066205  121.498771\n",
+       "3   4     106     101   745  25.026635  121.551803\n",
+       "4   5     110     101    64  25.039510  121.576738"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -325,7 +270,7 @@
        " 505: 'FireStation'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,52 +281,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from LatLonToTWD97 import LatLonToTWD97\n",
-    "c = LatLonToTWD97()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "#將經緯度轉為TWD97座標(單位:公尺)\n",
     "data = list(map(c.convert,envdf[envdf.typeID==102].loc[:,['lat','lng']].values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best bandwidth: 300\n",
-      "CPU times: user 12min 24s, sys: 569 ms, total: 12min 24s\n",
-      "Wall time: 12min 23s\n"
+      "best bandwidth: 2000\n",
+      "CPU times: user 744 ms, sys: 4.78 ms, total: 749 ms\n",
+      "Wall time: 741 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "#貪婪法找bandwidth\n",
     "from sklearn.neighbors import KernelDensity\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# use grid search cross-validation to optimize the bandwidth\n",
-    "params = {'bandwidth': np.arange(0,500,50)}\n",
+    "params = {'bandwidth': np.arange(0,2001,50)}\n",
     "grid = GridSearchCV(KernelDensity(), params)\n",
     "grid.fit(data)\n",
     "\n",
@@ -390,34 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "300"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid.best_estimator_.bandwidth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#迴圈測試\n",
     "start_bandwidth = 100\n",
     "end_bandwidth = 501\n",
     "step = 50\n",
@@ -438,27 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1901"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "end_bandwidth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +361,7 @@
        "1450"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -600,28 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 11 µs, sys: 0 ns, total: 11 µs\n",
-      "Wall time: 13.6 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
     "from sklearn.neighbors import KernelDensity\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "result2 = {}\n",
-    "def getbw(key):\n",
-    "    start_bandwidth = 100\n",
-    "    end_bandwidth = 501\n",
-    "    step = 100\n",
+    "\n",
+    "def getbw(key, inf=100, sup=3000, step=100):\n",
+    "    start_bandwidth = inf\n",
+    "    end_bandwidth = inf+500\n",
     "    best = end_bandwidth + 100\n",
     "    data = list(map(c.convert,envdf[envdf.typeID==key].loc[:,['lat','lng']].values))\n",
     "    while True:\n",
@@ -630,22 +515,44 @@
     "        grid = GridSearchCV(KernelDensity(), params)\n",
     "        grid.fit(data)\n",
     "        best = grid.best_estimator_.bandwidth\n",
-    "        end_bandwidth = end_bandwidth + 100\n",
-    "        start_bandwidth = start_bandwidth + 100\n",
-    "        if best < start_bandwidth or end_bandwidth>3000:\n",
+    "        end_bandwidth = end_bandwidth + 300\n",
+    "        start_bandwidth = start_bandwidth + 300\n",
+    "        if best < start_bandwidth or end_bandwidth>=sup:\n",
     "            break\n",
-    "    return grid.best_estimator_\n",
-    "    "
+    "    return grid.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KernelDensity(algorithm='auto', atol=0, bandwidth=2100, breadth_first=True,\n",
+       "       kernel='gaussian', leaf_size=40, metric='euclidean',\n",
+       "       metric_params=None, rtol=0)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getbw(102)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "result2 = {}\n",
-    "for key in list(typeid.keys())[16:]:\n",
+    "for key in typeid.keys():\n",
     "    result2[key] = getbw(key)"
    ]
   },
@@ -684,63 +591,6 @@
    ],
    "source": [
     "result2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "result3 = {102: KernelDensity(algorithm='auto', atol=0, bandwidth=2100, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 201: KernelDensity(algorithm='auto', atol=0, bandwidth=900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 202: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 203: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 204: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 205: KernelDensity(algorithm='auto', atol=0, bandwidth=1700, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 206: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 207: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 301: KernelDensity(algorithm='auto', atol=0, bandwidth=2400, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 302: KernelDensity(algorithm='auto', atol=0, bandwidth=1200, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 303: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 304: KernelDensity(algorithm='auto', atol=0, bandwidth=2900, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 305: KernelDensity(algorithm='auto', atol=0, bandwidth=2200, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 401: KernelDensity(algorithm='auto', atol=0, bandwidth=1600, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 402: KernelDensity(algorithm='auto', atol=0, bandwidth=1300, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0),\n",
-    " 403: KernelDensity(algorithm='auto', atol=0, bandwidth=1400, breadth_first=True,\n",
-    "        kernel='gaussian', leaf_size=40, metric='euclidean',\n",
-    "        metric_params=None, rtol=0)}"
    ]
   },
   {
@@ -810,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -821,7 +671,7 @@
        "[202, 203, 204, 206, 207, 303, 304, 501, 502, 503, 504, 505]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,34 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def getbw(key, inf=100, sup=3000, step=100):\n",
-    "    start_bandwidth = inf\n",
-    "    end_bandwidth = inf+500\n",
-    "    best = end_bandwidth + 100\n",
-    "    data = list(map(c.convert,envdf[envdf.typeID==key].loc[:,['lat','lng']].values))\n",
-    "    while True:\n",
-    "        band_range = np.arange(start_bandwidth,end_bandwidth,step)\n",
-    "        params = {'bandwidth': band_range}\n",
-    "        grid = GridSearchCV(KernelDensity(), params)\n",
-    "        grid.fit(data)\n",
-    "        best = grid.best_estimator_.bandwidth\n",
-    "        end_bandwidth = end_bandwidth + 100\n",
-    "        start_bandwidth = start_bandwidth + 100\n",
-    "        if best < start_bandwidth or end_bandwidth>sup:\n",
-    "            break\n",
-    "    return grid.best_estimator_\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -872,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -883,7 +706,7 @@
      "text": [
       "202 MRT 4300\n",
       "203 UBike 3500\n",
-      "204 Train 6900\n",
+      "204 Train 6600\n",
       "206 Charger 5400\n",
       "207 Towing 6000\n",
       "303 Library 4800\n",
@@ -891,8 +714,8 @@
       "501 School 4000\n",
       "502 Hospital 5800\n",
       "503 Pharmacy 3500\n",
-      "504 Police 6900\n",
-      "505 FireStation 6900\n"
+      "504 Police 6600\n",
+      "505 FireStation 6600\n"
      ]
     }
    ],
