--- a/Untitled Folder/Kernel Density Estimation in Python.ipynb
+++ b/Untitled Folder/Kernel Density Estimation in Python.ipynb
@@ -836,7 +836,9 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tmp2 = tmp.map(lambda x: x.split(','))"
