--- a/Untitled Folder/hirchael_2.ipynb
+++ b/Untitled Folder/hirchael_2.ipynb
@@ -2,11 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-70bc0c87ae16>, line 19)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-70bc0c87ae16>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    from ../LatLonToTWD97 import LatLonToTWD97\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "X= pd.read_csv('./big_table.csv')"
+    "X= pd.read_csv('./tmp/big_table.csv')"
    ]
   },
   {
