--- a/step4_classify.ipynb
+++ b/step4_classify.ipynb
@@ -1021,7 +1021,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rentdf.join(test).to_csv('./data/tag.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -1879,7 +1888,7 @@
        "      <td>N</td>\n",
        "      <td>6200</td>\n",
        "      <td>7.00</td>\n",
-       "      <td>25.010892</td>\n",
+       "      <td>25.010893</td>\n",
        "      <td>121.479843</td>\n",
        "      <td>套</td>\n",
        "      <td>15</td>\n",
@@ -1904,7 +1913,7 @@
        "      <td>6300</td>\n",
        "      <td>6.00</td>\n",
        "      <td>25.000297</td>\n",
-       "      <td>121.482306</td>\n",
+       "      <td>121.482307</td>\n",
        "      <td>套</td>\n",
        "      <td>3</td>\n",
        "      <td>1050.000000</td>\n",
@@ -2561,8 +2570,8 @@
        "20718  24769     116   N  47000  61.00  24.992647  121.570882     套     12   \n",
        "20719  24770     237   N   6200   5.00  24.944576  121.372507     套      2   \n",
        "20720  24771     220   N   8800   8.00  25.017972  121.466246     套      1   \n",
-       "20721  24772     235   N   6200   7.00  25.010892  121.479843     套     15   \n",
-       "20722  24773     235   N   6300   6.00  25.000297  121.482306     套      3   \n",
+       "20721  24772     235   N   6200   7.00  25.010893  121.479843     套     15   \n",
+       "20722  24773     235   N   6300   6.00  25.000297  121.482307     套      3   \n",
        "20723  24774     241   Y   8000  13.00  25.060009  121.494900     套      3   \n",
        "20724  24775     105   N  33000  32.00  25.056928  121.554835     套      3   \n",
        "20725  24776     106   N  13000   6.00  25.034349  121.525583     套      2   \n",
@@ -2781,13 +2790,13 @@
        "[20748 rows x 21 columns]"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rentdf.join(test)."
+    "pd.read_csv('./data/tag.csv')"
    ]
   },
   {
