--- a/classify.ipynb
+++ b/classify.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 610,
    "metadata": {
     "collapsed": true
    },
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 603,
    "metadata": {
     "collapsed": true
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 624,
    "metadata": {
     "collapsed": true
    },
@@ -1031,69 +1031,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 625,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['tag:pet', 'tag:transport', 'tag:capital', 'tag:home', 'tag:sport',\n",
-       "       'tag:culture', 'tag:safe', 'tag:food'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 580,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test.columns=tagdf.columns\n",
-    "test.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 581,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test.iloc[:,0:4] = test.iloc[:,0:4].apply(lambda x: (x - x.mean())/x.std() > 0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 582,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test.iloc[:,0:4] = test.iloc[:,0:4].apply(lambda x: (x - x.mean())/x.std() > 0.5)\n",
     "test.iloc[:,4:8] = test.iloc[:,4:8].apply(lambda x: (x - x.mean())/x.std() > 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tag:pet          0.191778\n",
-       "tag:transport    0.350877\n",
+       "tag:transport    0.590274\n",
        "tag:capital      0.248602\n",
        "tag:home         0.160979\n",
-       "tag:sport        0.362445\n",
-       "tag:culture      0.310922\n",
-       "tag:safe         0.362252\n",
-       "tag:food         0.371698\n",
+       "tag:sport        0.418161\n",
+       "tag:culture      0.405726\n",
+       "tag:safe         0.506748\n",
+       "tag:food         0.481010\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 583,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 632,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1089,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 584,
+     "execution_count": 632,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,132 +1100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tag:pet</th>\n",
-       "      <th>tag:transport</th>\n",
-       "      <th>tag:capital</th>\n",
-       "      <th>tag:home</th>\n",
-       "      <th>tag:sport</th>\n",
-       "      <th>tag:culture</th>\n",
-       "      <th>tag:safe</th>\n",
-       "      <th>tag:food</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  tag:pet tag:transport tag:capital tag:home tag:sport tag:culture tag:safe  \\\n",
-       "0   False         False       False     True      True       False    False   \n",
-       "1   False         False       False     True     False       False    False   \n",
-       "2   False         False       False     True     False       False    False   \n",
-       "3   False         False        True    False      True       False    False   \n",
-       "4   False         False        True    False     False       False    False   \n",
-       "\n",
-       "  tag:food  \n",
-       "0    False  \n",
-       "1    False  \n",
-       "2    False  \n",
-       "3    False  \n",
-       "4    False  "
-      ]
-     },
-     "execution_count": 585,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 633,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "count    20748.000000\n",
-       "mean         2.359553\n",
-       "std          1.947988\n",
-       "min          0.000000\n",
-       "25%          1.000000\n",
-       "50%          2.000000\n",
+       "mean         3.003277\n",
+       "std          1.643327\n",
+       "min          1.000000\n",
+       "25%          2.000000\n",
+       "50%          3.000000\n",
        "75%          4.000000\n",
        "max          8.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 633,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,17 +1128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 634,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    3448\n",
+       "0    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 587,
+     "execution_count": 634,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,18 +1149,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 609,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test['tag:other'] = test.T.sum()<1"
+    "test2 = test.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 630,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = test | test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 635,
    "metadata": {
     "collapsed": true
    },
@@ -1311,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 636,
    "metadata": {
     "collapsed": true
    },
@@ -1322,14 +1200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 637,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#rentdf.join(test).to_csv('./data/tag.csv', index=False)\n",
-    "rentdf.join(test).to_csv('./data/tag_002.csv', index=False)"
+    "rentdf.join(test).to_csv('./data/tag_003.csv', index=False)"
    ]
   },
   {
