--- a/Kernel_density_estimation_and_sparkKDE.ipynb
+++ b/Kernel_density_estimation_and_sparkKDE.ipynb
@@ -35,6 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $H=\\left[\\begin{array}{cc} r & 0 \\\\ 0 & r \\end{array}\\right]$, then 2d KDE can be write \n",
+    "$$\\begin{array}{ll} \\hat f(x;H) &= \\frac{1}{n}\\sum_{i=1}^{n} K_{H}(x-X_i)\\\\\n",
+    "&= c\\end{array}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
